# de-rbearthgaze

./: .env.development  .gitignore  .pylintrc  README.md  console.py  pyproject.toml
.config/: the.code-workspace
M1_Producers/: console.py  pyproject.toml
M1_Producers/aircraft/: doc8643.py  notebook.ipynb
M1_Producers/aircraft_model/: doc8643.py  notebook.ipynb
M1_Producers/flight_signal/: __init__.py  notebook.ipynb
M1_Producers/shared/: spark_config.py
M2_Processors/: pyproject.toml
M2_Processors/aircraft/: __init__.py  ddl.ipynb  raw.ipynb  tier1.ipynb
M2_Processors/aircraft_model/: ddl.ipynb  raw.ipynb  tier1.ipynb
M2_Processors/airline/: ddl.ipynb  raw.ipynb  tier1.ipynb
M2_Processors/airport/: ddl.ipynb  raw.ipynb  tier1.ipynb
M2_Processors/flight_signal/: ddl.ipynb  raw.ipynb  tier1.ipynb
M2_Processors/shared/: spark_config.py
M4_Presentation/: map.ipynb  pyproject.toml
M4_Presentation/shared/: spark_config.py
MX_ScheduledJobs/: pyproject.toml
assets/: airlines_sample.csv  credits.md  doc8643_icao.txt
docker/: compose.catalog.yaml  compose.dask.yaml  compose.kafka.yaml  compose.spark.yaml
docs/: architecture.drawio
libs/: pyproject.toml
libs/libs/airline/: models.py  schemas.py
libs/libs/configuration/: __init__.py  models.py
libs/libs/core/: __init__.py
libs/libs/kafka/: __init__.py  schema.py
libs/libs/logging/: __init__.py
libs/libs/models/: aircraft.py  aircraft_model.py  airport.py  flight.py  flight_signal.py
