[tool.poetry]
name = "de-rbearthgaze"
version = "1.0"
description = ""
authors = ["Tavin S Alderson <neot.oncloud@pm.me>"]
readme = "README.md"
packages = [
  { include = "libs" },
  { include = "M1_Producers" },
  { include = "M2_StreamProcessors" },
  { include = "MX_ScheduledJobs" },
]


[tool.poetry.scripts]
boom = 'console:shoot'


[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
confluent-kafka = "^2.3.0"
munch = "^4.0.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
ogn-client = "^1.2.1"
pyspark = "^3.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
pylint = "^3.0.3"
black = "^23.12.1"
isort = "^5.13.2"


[tool.poetry.group.ops.dependencies]
podman-compose = "^1.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
