[tool.poetry]
name = "de-rbearthgaze-m4"
version = "1.0"
description = ""
authors = ["Tavin S Alderson <neot.oncloud@pm.me>"]
packages = [
  { include = "shared" },
]

[tool.poetry.dependencies]
python = ">= 3.9"
libs = { path = "../libs", develop = true }
plotly = "^5.18.0"
pandas = "^2.2.0"
ipykernel = "^6.29.0"
nbformat = "^5.9.2"
pyarrow = "^15.0.0"
dash = "^2.14.2"
pyspark = "^3.5.0"

[tool.pylint.format]
max-line-length = 100

[tool.pylint.'MESSAGES CONTROL']
disable = "C0413,C0114"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
